syntax = "proto3";

import "io/anemos/options.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.anemos.examples";
option java_multiple_files = true;

package io.anemos.examples;

message BytesTest {
    bytes payload = 1;
}


message SchemaTest {

    message EmbeddedTest {
        string foo = 1;
    }

    message RepeaterTest {
        string bar = 2;
    }


    bytes payload = 1;
    EmbeddedTest test_one = 2;
    repeated RepeaterTest test_repeater = 3;
}

message Message {
    MessagePrimitive message = 1 [(io.anemos.field_rewrite) = {
        flatten: true
    }];
    repeated MessagePrimitive repeated_message = 2;
}

message MessagePrimitive {
    double primitive_double = 1;
    float primitive_float = 2;
    int32 primitive_int32 = 3;
    int64 primitive_int64 = 4;
    uint32 primitive_uint32 = 5;
    uint64 primitive_uint64 = 6;
    sint32 primitive_sint32 = 7;
    sint64 primitive_sint64 = 8;
    fixed32 primitive_fixed32 = 9;
    fixed64 primitive_fixed64 = 10;
    sfixed32 primitive_sfixed32 = 11;
    sfixed64 primitive_sfixed64 = 12;
    bool primitive_bool = 13;
    string primitive_string = 14;
    bytes primitive_bytes = 15;
}

message MessageRepeatPrimitive {
    repeated double repeated_double = 1;
    repeated float repeated_float = 2;
    repeated int32 repeated_int32 = 3;
    repeated int64 repeated_int64 = 4;
    repeated uint32 repeated_uint32 = 5;
    repeated uint64 repeated_uint64 = 6;
    repeated sint32 repeated_sint32 = 7;
    repeated sint64 repeated_sint64 = 8;
    repeated fixed32 repeated_fixed32 = 9;
    repeated fixed64 repeated_fixed64 = 10;
    repeated sfixed32 repeated_sfixed32 = 11;
    repeated sfixed64 repeated_sfixed64 = 12;
    repeated bool repeated_bool = 13;
    repeated string repeated_string = 14;
    repeated bytes repeated_bytes = 15;
}

message MessageWkt {
    google.protobuf.Timestamp timestamp = 1;
}
